--- a/src/frontend/calculator/calc.scss
+++ b/src/frontend/calculator/calc.scss
@@ -12,6 +12,8 @@
 
         .display1 {
             background: #d8d8d8;
+            color: black;
+            font: 2em  bold;
             border-top: none;
             position: relative;
             top: -2px;
@@ -20,6 +22,8 @@
 
         .display2 {
             background: #d8d8d8;
+            color: black;
+            font: 0.875em;
             text-align: right;
             border-bottom: none;
             padding: 2px;
