--- a/src/frontend/simon-game/simon.scss
+++ b/src/frontend/simon-game/simon.scss
@@ -64,11 +64,26 @@
                 top: 14%;
                 left: 17%;
             }
+            .strict-hold {
+                width: 70px;
+                margin-top: 20px;
+                position: relative;
+                left: 30%;
+                .text-muted {
+                    padding-left: 5px;
+                }
+
+                .strict.btn.btn-danger.active {
+                    background-color: green;
+                    transition: 1s background-color linear;
+                }
+                
+            }
             .button-panel {
                 position: absolute;
                 width: 80px;
                 left: 25%;
-                margin-top: 50%;
+                margin-top: 60%;
             }
         } 
         }
